<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.first.myfavouritemoviesfragment.MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:text="@string/add_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="61dp"
            android:id="@+id/button"
            android:width="180dp"
            android:height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="onClickAddMovie" />

        <Button
            android:text="@string/show_list_by_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:width="180dp"
            android:height="60dp"
            android:layout_below="@+id/button4"
            android:layout_alignLeft="@+id/button4"
            android:layout_alignStart="@+id/button4"
            android:onClick="onClickRate" />

        <Button
            android:text="@string/show_list_by_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:width="180dp"
            android:height="60dp"
            android:layout_below="@+id/button3"
            android:layout_alignLeft="@+id/button3"
            android:layout_alignStart="@+id/button3"
            android:onClick="onClickYear" />

        <Button
            android:text="@string/delete_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:width="180dp"
            android:height="60dp"
            android:layout_below="@+id/button2"
            android:layout_alignLeft="@+id/button2"
            android:layout_alignStart="@+id/button2"
            android:onClick="onClickDelete" />

        <Button
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:width="180dp"
            android:height="60dp"
            android:layout_below="@+id/button"
            android:layout_alignLeft="@+id/button"
            android:layout_alignStart="@+id/button"
            android:onClick="onClickEditMovie" />



    </RelativeLayout>



</FrameLayout>
